// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Basic Page 1`] = `
<div
  style="height:100vh;width:100vw"
>
  <div
    class="Page-pageContainer-0 Page-pageWithHeader-0 Page-pageWithFooter-0 Page-backgroundStandard-0"
  >
    <header
      class="Page-pageHeader-0 Page-baseBar-0"
    >
      <div
        class="Bar-bar-0 Bar-auto-0"
        data-bar-part="Root"
      >
        <div
          class="Bar-left-0"
          data-bar-part="Left"
        >
          <ui5-button
            design="Transparent"
            icon="navigation-left-arrow"
          />
        </div>
        <div
          class="Bar-center-0"
          data-bar-part="Center"
        >
          <div
            class="Bar-inner-0"
          >
            <ui5-title
              level="H5"
            >
              Page Demo
            </ui5-title>
          </div>
        </div>
        <div
          class="Bar-right-0"
          data-bar-part="Right"
        />
      </div>
    </header>
    <section
      class="Page-contentSection-0"
    >
      Page Content
    </section>
    <footer
      class="Page-pageFooter-0 Page-baseBar-0"
    />
  </div>
</div>
`;

exports[`Page Basic Page w/o back button 1`] = `
<div
  style="height:100vh;width:100vw"
>
  <div
    class="Page-pageContainer-0 Page-pageWithHeader-0 Page-pageWithFooter-0 Page-backgroundStandard-0"
  >
    <header
      class="Page-pageHeader-0 Page-baseBar-0"
    >
      <div
        class="Bar-bar-0 Bar-auto-0"
        data-bar-part="Root"
      >
        <div
          class="Bar-left-0"
          data-bar-part="Left"
        />
        <div
          class="Bar-center-0"
          data-bar-part="Center"
        >
          <div
            class="Bar-inner-0"
          >
            <ui5-title
              level="H5"
            >
              Page Demo
            </ui5-title>
          </div>
        </div>
        <div
          class="Bar-right-0"
          data-bar-part="Right"
        />
      </div>
    </header>
    <section
      class="Page-contentSection-0"
    >
      Page Content
    </section>
    <footer
      class="Page-pageFooter-0 Page-baseBar-0"
    />
  </div>
</div>
`;

exports[`Page Without footer and Header 1`] = `
<div
  class="Page-pageContainer-0 Page-backgroundStandard-0"
>
  <section
    class="Page-contentSection-0"
  >
    Page Content
  </section>
</div>
`;
